# claude-trading-bot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  alerts.py  backtest.py  broker.py  claude_advisor.py  config.yaml  config_loader.py  data.py  donchian_runner.py  donchian_strategy.py  executor.py  journal.py  logger.py  main.py  package-lock.json  profiles.py  pyproject.toml  research.py  risk.py  setup.sh  strategy.py
api/: bot_manager.py  deps.py  main.py
api/routers/: account.py  backtest_router.py  bars_router.py  bot.py  config_router.py  donchian_router.py  kill.py  logs.py  positions.py  profiles_router.py  ws.py
docs/: trend_sr_filters.md
tests/: test_bot_manager.py  test_config.py  test_donchian.py  test_donchian_router.py  test_donchian_runner.py  test_ema.py  test_executor.py  test_risk.py  test_strategy.py  test_trend_sr.py  test_vwap.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: BacktestPanel.tsx  BotControls.tsx  ConfigEditor.tsx  DonchianPanel.tsx  EquityChart.tsx  ErrorBoundary.tsx  KillSwitch.tsx  MarketStatus.tsx  PnLChart.tsx  PositionsTable.tsx  PriceChart.tsx  ProfileDashboard.tsx  ProfilesPanel.tsx  SignalFeed.tsx  StatusBar.tsx
ui/src/hooks/: useApi.ts  useWebSocket.ts
