[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "tests*"]

[tool.setuptools]
py-modules = [
    "config_loader", "logger", "risk",
    "broker", "data", "strategy", "executor", "main",
    "backtest", "alerts",
    "journal", "research", "claude_advisor",
]

[project]
name = "claude-trading"
version = "0.1.0"
description = "Alpaca paper trading scaffold — ORB strategy, paper mode only"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "structlog>=24.4.0,<25.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "anthropic>=0.30.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2,<9.0.0",
    "pytest-asyncio>=0.23.8,<0.25.0",
    "mypy>=1.11.0,<2.0.0",
    "ruff>=0.5.5,<1.0.0",
    "types-pyyaml>=6.0.12,<7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
